--- a/src/app/components/single-news/single-news.component.html
+++ b/src/app/components/single-news/single-news.component.html
@@ -1,1 +1,23 @@
-<p>single-news works!</p>
+<div class="row">
+  <div class="col-lg-4 col-md-6 col-sm-12" *ngFor="let item of news">
+    <div class="card my-4">
+      <img [src]="item.urlToImage" class="card-img-top" alt="..." />
+      <div class="card-body">
+        <p class="tag">{{ item.source.name }}</p>
+        <h4>{{ (item.title | slice: 0:70) + "..." }}</h4>
+
+        <p class="description">
+          {{ (item.description | slice: 0:200) + "..." }}
+        </p>
+
+        <div class="authorInfo">
+          <span class="authorName">{{ item.source.name }}</span>
+          <span class="articleDate">
+            <i class="bi bi-calendar"></i>
+            {{ item.publishedAt | date: "mediumDate" }}</span
+          >
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
