--- a/src/app/modules/news/all-news/all-news.component.html
+++ b/src/app/modules/news/all-news/all-news.component.html
@@ -1,1 +1,4 @@
-<p>all-news works!</p>
+<div class="allNews">
+  <h1>Featured Articles</h1>
+  <app-single-news [news]="news"></app-single-news>
+</div>
