--- a/src/app/components/nav-bar/nav-bar.component.html
+++ b/src/app/components/nav-bar/nav-bar.component.html
@@ -15,10 +15,22 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">All News</a>
+          <a
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            [routerLink]="['/']"
+            class="nav-link"
+            >All News</a
+          >
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Susbcribed News</a>
+          <a
+            routerLinkActive="active"
+            [routerLinkActiveOptions]="{ exact: true }"
+            [routerLink]="['/subscribed']"
+            class="nav-link"
+            >Susbcribed News</a
+          >
         </li>
       </ul>
     </div>
